# freecad-actions

./: .gitignore  Agents.md  Architecure.md  Dockerfile  Makefile  README.md  action.yml  cad-gallery.yaml  gallery.yaml  maker.yaml  profile.yaml  pyproject.toml
.github/workflows/: cad-gallery.yaml  dependabot-automerge.yml  docker-publish.yaml  release.yaml
freecad-files/: aeropress-filter.FCStd  keycrhonev2.FCStd  keycrhonev2.FCStd1  treck-cryptonite.FCStd
metadata/: aeropress-filter.yaml  keycrhonev2.yaml  treck-cryptonite.yaml  öpcjeosemsatz.FCStd
schemas/: cad-gallery.schema.json  discovery.schema.json  gallery.schema.json  maker.schema.json  meta.schema.json
scripts/: build.sh  build_gallery.py  export.py  package-lock.json  package.json  tailwind.config.js  validate.py
scripts/templates/: about.html  atom.xml  detail.html  gallery.html  input.css  rss.xml  styles.css
scripts/templates/partials/: base.html  footer.html  scripts.html
templates/: about.html  detail.html  gallery.html
